# PreliMine

./: .gitignore  README.md  app.py  data.csv  pyproject.toml  visualization.ipynb
prelimine/: course_graph.py
