[tool.poetry]
name = "prelimine"
version = "0.1.0"
description = "Dashboard to visualize the graph of preliminaries for each course in CEU course list"
authors = ["Istvan Peter Jaray <istvanpeterjaray@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
streamlit = "^1.38.0"
networkx = "^3.3"
pyvis = "^0.3.2"
rustworkx = "^0.15.1"
jupyter = "^1.1.1"
plotly = "^5.24.0"
matplotlib = "^3.9.2"
pydot = "^3.0.1"
graphviz = "^0.20.3"
seaborn = "^0.13.2"
mpld3 = "^0.5.10"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
